rename some classes

--- a/DemoApplication/DemoApplication.csproj
+++ b/DemoApplication/DemoApplication.csproj
@@ -115,18 +115,18 @@
     <Compile Include="ExampleDockableWindow.designer.cs">
       <DependentUpon>ExampleDockableWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmMain.cs">
+    <Compile Include="FrmMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmMain.designer.cs">
-      <DependentUpon>frmMain.cs</DependentUpon>
+    <Compile Include="FrmMain.designer.cs">
+      <DependentUpon>FrmMain.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="ExampleDockableWindow.resx">
       <DependentUpon>ExampleDockableWindow.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmMain.resx">
-      <DependentUpon>frmMain.cs</DependentUpon>
+    <EmbeddedResource Include="FrmMain.resx">
+      <DependentUpon>FrmMain.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="welcome.rtf">
